# launcher

./: .eslintrc.json  .gitignore  .pnp.cjs  .prettierrc  .yarnrc.yml  README.md  SECURITY.md  index.html  jest.config.ts  package.json  renovate.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: development.yml  frontend.yml  publish.yml  rust.yml
.husky/: commit-msg  pre-commit
.scripts/: package.json
.scripts/tspathgen/: index.js
.storybook/: font.css  main.js  preview.jsx  theme.js
app/entrypoint/: index.html  package.json  vite.config.ts
app/entrypoint/src/: index.ts  index.tsx  prelaod.ts
app/preload/: package.json
app/preload/src/: index.ts
app/providers/: package.json
app/providers/src/: index.ts  with-intl.tsx  with-recoil.tsx  with-router.tsx  with-theme.tsx
app/root/: package.json
app/root/src/: index.tsx
app/routes/: package.json
app/routes/src/: index.tsx
app/vite/: package.json
dev/codestyle/: .eslintrc.idea.json  .eslintrc.json  eslint.config.js  package.json
dev/storybook/: package.json
dev/testing/: config.ts  package.json  test.test.ts  vitest.config.ts
jsx/helpers/: package.json
pages/home/: package.json
pages/versions/: package.json
rust/: Cargo.toml  rustfmt.toml  tauri.conf.json
rust/commands/: Cargo.toml
rust/commands/src/: lib.rs  process.rs
rust/commands/src/compat/: download.rs  mod.rs  unzip.rs
rust/macros/: Cargo.toml
rust/ndml/: Cargo.toml
rust/ndml/src/: fetch.rs
rust/src/: main.rs
shared/env/: package.json
shared/styled/: package.json
src/: App.tsx  Routes.tsx  main.tsx  styled.d.ts  types.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: checksum.rs  download.rs  main.rs  os.rs  unzip.rs
src-tauri/src/download/: hash.rs  mod.rs
src-tauri/src/utils/: result.rs
src/__tests__/: Jest.test.tsx
src/components/: types.ts
src/config/: CentralConfig.service.ts  LauncherSettings.service.ts  Repository.ts  index.ts
src/core/: index.ts  injector.ts
src/debug/: ErrorBoundary.tsx  debug.module.ts  debug.service.ts  delog.service.ts  delog.tsx  error.ts  index.ts  object-renderer.tsx  report.module.ts  report.service.ts
src/error/: index.ts
src/exceptions/: ExceptionHandler.ts  SelfHandledException.ts  index.ts  types.ts
src/extra/: global.d.ts  jsutils.ts  react.tsx
src/global/: GlobalStyle.ts  style.ts
src/hooks/: index.ts  theme.ts  useAppData.ts  useCachedState.ts  useDebug.ts  useFontawesomeLoader.ts  useMod.ts  useModule.ts  useNative.ts  useOnce.tsx  usePrevious.ts  useService.ts  useStorageState.ts  useStore.ts  useThemeToggleHotkey.ts
src/i18n/: Structure.ts  fallback.ts  i18n.module.ts  i18n.service.ts  i18n.store.ts  index.ts  langs.tsx
src/interfaces/: Fastore.ts
src/java/: JavaRuntime.service.ts  adoptium.ts  index.ts  java-runtime.module.ts  java-runtime.service.ts  java-runtime.store.ts  java-runtime.types.ts
src/logging/: Logger.ts  LoggingPool.service.ts  index.ts
src/markdown/: index.tsx
src/minecraft/: BlakeMap.service.ts  GameProfile.service.ts  Instance.ts  InstanceFactory.service.ts  InstanceSettings.ts  InstanceStore.service.ts  Launcher.ts  LauncherProfile.ts  MinecraftJournal.service.ts  SimpleHandler.ts  index.ts
src/network/: NetworkChecker.service.ts  download.ts  index.ts  network-checker.module.ts  network-checker.service.ts  network-checker.store.ts  network-checker.types.ts
src/notifications/: Popup.service.ts  index.ts
src/positron/: index.ts
src/preload/: Preloader.service.ts  Wait.service.ts  index.ts  preloader.module.ts  preloader.service.ts  preloader.store.ts  preloader.types.ts
src/screens/: Screen.tsx  Screens.tsx
src/settings/: GeneralSettings.service.ts  general-settings.module.ts  general-settings.store.ts  index.ts
src/storage/: CentralConfig.service.ts  DataStorage.service.ts  JSON5Config.ts  PersistentCache.service.ts  index.ts  types.ts
src/store/: ObserverComponent.ts  store.tsx
src/stories/: Button.stories.mdx  Checkbox.stories.mdx  Input.stories.mdx  Select.stories.mdx  SquareGroupSwitcher.stories.mdx  SquareGroupToggle.stories.mdx  Text.stories.mdx  VersionPicker.stories.mdx
src/style/: font.tsx  fonts.css  global.css  global.ts  index.ts  snippets.ts  style.tsx
src/theme/: Theme.service.ts  index.ts  theme.module.ts  theme.store.ts  themes.ts  type.ts  utils.ts
src/tse/: global.d.ts  jsutils.ts
src/updater/: Updater.service.ts  index.ts  update.ts  updater.module.ts
src/user/: PlayerLite.service.ts  index.ts  player-lite.module.ts  player-lite.store.ts
src/utils/: UtilityProps.ts  UtilityTypes.ts  filters.ts  import.ts  index.ts  loadIcons.ts  map.ts  math.ts  progress.ts  promise.ts  react.ts  reflection.ts  snapshot.ts  string.ts  style.ts  todo.ts  types.ts  wait.ts
(+579 files in other folders)
