[package]
name = "app"
version = "0.1.0"
description = "Nodium Minecraft Launcher"
authors = ["LIMPIX31"]
license = "All Rights Reserved"
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = [
  "commands",
]

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
tauri = { version = "1.2.5", features = ["devtools", "dialog-open", "fs-all", "http-all", "os-all", "path-all", "process-exit", "process-relaunch", "protocol-all", "shell-all", "updater", "window-all"] }
tokio = { version = "1", features = ["full"] }
commands = { path = "./commands" }
tauri-plugin-fs-watch = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }

[dependencies.tauri-plugin-deep-link]
git = "https://github.com/FabianLars/tauri-plugin-deep-link"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
