[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.62"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.1", features = ["api-all", "updater"] }
zip = "0.6.2"
nanoid = "0.4.0"
checksums = "0.9.1"
reqwest = { version = "0.11.11", features = [ "stream" ] }
futures = "0.3.23"
futures-lite = "1.12.0"
sha-1 = "0.10.0"
digest = { version = "0.10.3", features = [ "std" ] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.23"
thiserror = "1.0.31"
blake3 = "1.3.1"
proc-macro2 = "1.0.43"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
