[package]
name = "app"
version = "0.1.0"
description = "Nodium Minecraft Launcher"
authors = ["LIMPIX31"]
license = "All Rights Reserved"
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.62"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1.1", features = ["fs-all", "http-all", "os-all", "path-all", "protocol-all", "shell-all", "updater", "window-all"] }
zip = "0.6.2"
reqwest = { version = "0.11.11", features = [ "stream" ] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.24"
thiserror = "1.0.35"
blake3 = "1.3.1"
sysinfo = "0.26.2"

[dependencies.tauri-plugin-fs-watch]
git = "https://github.com/tauri-apps/tauri-plugin-fs-watch"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
