[package]
name = "commands"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
blake3 = "1.3"
sysinfo = "0.26"
arrayvec = "0.7"
reqwest = { version = "0.11", features = [ "stream" ] }
zip = "0.6"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
url = { version = "2.3", features = ["serde"] }
tauri = "1.2"
lazy_static = "1"
flate2 = "1.0"
tar = "0.4"
