[package]
name = "ndml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.14", features = [ "stream", "json" ] }
tokio = { version = "1", features = ["full"] }
tauri = "1.2"
thiserror = "1.0"